--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "backbone": "^1.3.3",
     "jquery": "^3.1.0",
     "normalize-scss": "^5.0.3",
+    "pdfobject": "^2.0.201604172",
     "react": "^15.3.0",
     "react-addons-css-transition-group": "^15.3.0",
     "react-dom": "^15.3.0",
