--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-addons-css-transition-group": "^15.3.0",
     "react-dom": "^15.3.0",
     "react-router": "^2.6.1",
+    "react-scroll": "^1.3.0",
     "underscore": "^1.8.3"
   }
 }
